--- a/opins.css
+++ b/opins.css
@@ -164,6 +164,14 @@ nav ul li:hover #sub-menu-1 ul li {
   nav.open {
     top: 15%;
   }
+
+  .gmail-box {
+    margin: 0 0 2rem 10rem;
+  }
+
+  #submit-btn {
+    margin: 0 0 2rem 10rem;
+  }
 }
 
 .home {
@@ -185,7 +193,7 @@ header nav {
   gap: 20rem;
 }
 
-section #disc-1
+div #disc-1
 {
   position: absolute;
   top: -110px;
@@ -200,7 +208,7 @@ section #disc-1
   animation: disc 6s ease-in-out infinite alternate-reverse;
 }
 
-section #disc-2
+div #disc-2
 {
   position: absolute;
   top: -60px;
@@ -215,7 +223,7 @@ section #disc-2
   animation: disc-2 6s ease-in-out infinite alternate-reverse;
 }
 
-section #disc-3
+div #disc-3
 {
   position: absolute;
   top: -110px;
@@ -230,7 +238,7 @@ section #disc-3
   animation: disc-3 6s ease-in-out infinite alternate-reverse;
 }
 
-section #disc-4
+div #disc-4
 {
   position: absolute;
   top: 20rem;
@@ -245,7 +253,7 @@ section #disc-4
   animation: disc-4 6s ease-in-out infinite alternate-reverse;
 }
 
-section #disc-5
+div #disc-5
 {
   position: absolute;
   top: 40rem;
@@ -260,7 +268,7 @@ section #disc-5
   animation: disc-5 6s ease-in-out infinite alternate-reverse;
 }
 
-section #disc-6
+div #disc-6
 {
   position: absolute;
   top: 40rem;
@@ -407,13 +415,13 @@ header button:hover {
   align-items: center;
 }
 
-section h2 {
+div h2 {
   font-size: 55px;
   color: rgb(49, 49, 99);
   margin-bottom: 2rem;
 }
 
-section p {
+div p {
   margin-bottom: 2rem;
   font-size: 18px;
   color: gray;
@@ -512,7 +520,7 @@ section p {
   margin-left: 10.5rem;
 }
 
-#orange-logo section {
+#orange-logo div {
   font-size: 45px;
   text-align: center;
   color: rgb(63, 57, 57);
@@ -572,7 +580,7 @@ section p {
   gap: 2rem;
 }
 
-.aside img {
+.div img {
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
@@ -639,7 +647,7 @@ section p {
   gap: 2rem;
 }
 
-.aside img {
+.div img {
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
@@ -845,7 +853,7 @@ section p {
   background-color: rgba(127, 255, 212, 0.242);
 }
 
-#rounded-imgs-section {
+#rounded-imgs-div {
   position: relative;
 }
 
@@ -880,7 +888,7 @@ section p {
     height: 80rem;
   }
 
-  #rounded-imgs-section {
+  #rounded-imgs-div {
     width: 200px;
     position: absolute;
     top: 2%;
@@ -1110,28 +1118,27 @@ details p {
 }
 
 #sub-form {
-  margin-top: 4rem;
-  margin-bottom: 10rem;
+  margin: 4rem 0 10rem 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-#sub-form input {
+.gmail-box {
   padding-left: 2rem;
   width: 30rem;
   height: 5rem;
+  margin-right: 1rem;
   border: none;
   font-size: 20px;
   border-radius: 2px;
   box-shadow: 0 0 2px 0 gray;
 }
 
-.submit-btn {
-  width: 20rem;
+#submit-btn {
+  width: 10rem;
   height: auto;
   border-radius: 4px;
-  margin-left: 20px;
   height: 84px;
   border: none;
   outline: none;
@@ -1143,7 +1150,7 @@ details p {
   transition: all 0.4s ease;
 }
 
-.submit-btn:hover {
+#submit-btn:hover {
   background-color: darkblue;
 }
 
